<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Serenghetto</string>
    <string name="hello">I am Konker. Hear my ROAR!</string>
    <string name="scan_code">Scan code</string>
    <string name="update">Update</string>
    <string name="logged_out">Please enter you email and password to continue</string>
    <string name="go_to_preferences">Go to preferences</string>
    <string name="game">Game</string>
    <string name="codes">Codes</string>
    <string name="preferences">Preferences</string>
    <string name="titleEmail">Email</string>
    <string name="summaryEmail">Your Serenghetto email</string>
    <string name="titleUsername">Username</string>
    <string name="summaryUsername">Your Serenghetto username</string>
    <string name="titlePassword">Password</string>
    <string name="summaryPassword">Your Serenghetto password</string>
    <string name="titleGame">Game</string>
    <string name="titleCodes">Codes</string>
    <string name="titlePrefs">Preferences</string>
    <string name="titleScanCode">Scan barcode</string>
    <string name="titleServiceStart">Start service</string>
    <string name="titleServiceStop">Stop service</string>
    <string name="titlePrompt">Name</string>
    <string name="summaryPrompt">Enter an optional name for this item</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="gps_disabled">GPS is disabled. Please enable it to continue.</string>
    <!--[FIXME: does the user need the message below?]-->
    <string name="scanned_but_not_local">Barcode scanned but could not add to local database.</string>
    <string name="unknown_timestamp">(unknown)</string>
    <string name="titleSaveBarcode">Save</string>
    <string name="titleCancelBarcode">Cancel</string>
    <string name="titleOKBarcode">OK</string>
    <string name="titleBarcodeCode">Code</string>
    <string name="titleBarcodeTime">Timestamp</string>
    <string name="titleBarcodeLocation">Location</string>
    <string name="titleBarcodeTimestamp">Timestamp</string>
    <string name="titleBarcodeScore">Score</string>
    <string name="titleBarcodeName">Name</string>
    <string name="hintBarcodeName">Optional name</string>
</resources>
