<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/itemGame" android:title="@string/titleGame"
    android:icon="@android:drawable/ic_menu_myplaces"></item>
  <item android:id="@+id/itemCodes" android:title="@string/titleCodes"
    android:icon="@android:drawable/ic_menu_agenda"></item>
  <item android:id="@+id/itemPrefs" android:title="@string/titlePrefs"
    android:icon="@android:drawable/ic_menu_preferences"></item>
  <item android:id="@+id/itemScanBarcode" android:title="@string/titleScanCode"
    android:icon="@android:drawable/ic_menu_add"></item>
  <!--
  <item android:id="@+id/itemToggleService" android:title="@string/titleServiceStart"
    android:icon="@android:drawable/ic_media_play"></item>
    -->
</menu>

