<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            >
            <!-- hidden id field -->
            <TextView
                android:id="@id/textBarcodeId"
                android:text=""
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                />
            <TextView
                android:text="@string/titleBarcodeName"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:paddingBottom="4dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@id/textBarcodeName"
                android:text=""
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                />

            <TextView
                android:text="@string/titleBarcodeScore"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:paddingBottom="4dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@id/textBarcodeScore"
                android:text=""
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                />

            <TextView
                android:text="@string/titleBarcodeCode"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:paddingBottom="4dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@id/textBarcodeCode"
                android:text=""
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                />

            <TextView
                android:text="@string/titleBarcodeTime"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:paddingBottom="4dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@id/textBarcodeTimeReadable"
                android:text=""
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                />
            <TextView
                android:id="@id/textBarcodeTime"
                android:text=""
                android:layout_width="0dip" 
                android:layout_height="0dip" 
                android:visibility="invisible"
                />

            <TextView
                android:text="@string/titleBarcodeLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:textStyle="bold"
                />
            <com.google.android.maps.MapView
                android:id="@id/mapBarcodeLocation"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:clickable="false"
                android:apiKey="0Hkd6gl7IVP14c1Qyt9ctxeo9Sc0xgIVlQ0QBHg"
                />
            <TextView
                android:id="@id/textBarcodeLocationLatitude"
                android:text=""
                android:layout_width="0dip" 
                android:layout_height="0dip" 
                android:visibility="gone"
                />
            <TextView
                android:id="@id/textBarcodeLocationLongitude"
                android:text=""
                android:layout_width="0dip" 
                android:layout_height="0dip" 
                android:visibility="gone"
                />
            <TextView
                android:id="@id/textBarcodeLocationAccuracy"
                android:text=""
                android:layout_width="0dip" 
                android:layout_height="0dip" 
                android:visibility="gone"
                />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="16dp"
                android:gravity="center"
                >
                <Button
                    android:id="@id/buttonOKBarcode"
                    android:text="@string/titleOKBarcode"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

